Fixed z-index to avoid wrong overlapping

--- a/admin/jqadm/themes/default/nav.css
+++ b/admin/jqadm/themes/default/nav.css
@@ -302,7 +302,7 @@
 	.aimeos .main-navbar {
 		position: -webkit-sticky;
 		position: sticky;
-		z-index: 1041;
+		z-index: 1040;
 		top: 0;
 		margin: 1rem 0;
 		min-height: 3rem;
